--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ title: KoniPAS
                     <div class="section-gift__qr-col-1-of-2">
                         <h3 class="section-gift__qr-title">Náš transparentní účet:</h3>
                         <p class="section-gift__num-account u-padding-bottom-small">2602681682 / 2010</p>
-                        <figcaption class="section-gift__fig"><img class="section-gift__img" src="/images/QR-Code.svg" alt="QR kód"></figcaption>
+                        <picture class="section-gift__img"><img src="/images/qr-kod.png" alt="QR kód pro platbu"></picture>
                     </div>
                     <div class="section-gift__qr-col-2-of-2">
                         <p class="paragraph">Pracujeme na sestavení multidisciplinárního týmu, který poskytne potřebnou komplexní péči rodinám ve vhodných prostorách k tomu určených. Chceme nabízet rozvojové aktivity, smyslové terapie a vícedenní skupinové pobyty pro rodiny. Avšak k naplnění tohoto cíle potřebujeme i Vaši pomoc.</p>
