--- a/partneri.html
+++ b/partneri.html
@@ -3,18 +3,69 @@ layout: layouts/hlavni-sablona.njk
 title: Partneři
 ---
 
-<div class="u-background u-background--color-primary-200">
+<div class="partneri u-background u-background--color-primary-200">
     <section class="section-for u-wrapper u-padding-top-large u-padding-bottom-medium">
         <h1 class="heading-secondary section-for__title">Naši partneři</h1>
         <div>
-            <h2 class="heading-tertiary">Podporují nás:</h2>
-            <div>
-                <picture><img src="/images/logo_milovice.jpg" width="300" alt="logo města Milovice"></picture>
-                <h4>Město Milovice</h4>
-                <p class="paragraph paragraph--bold">- Dotace na provoz KoniPas Milovice, z.s. - r. 2024</p>
+            <h2 class="heading-tertiary u-padding-bottom-medium">Podporují nás:</h2>
+            <div class="partneri__grid u-padding-bottom-medium">
+                <div class="partneri__item">
+                    <picture><img src="/images/logo-milovice.svg" width="200" alt="logo města Milovice"></picture>
+                    <div>
+                        <h3>Město Milovice</h3>
+                        <p class="paragraph paragraph--bold">- Dotace na provoz KoniPas Milovice, z.s. <br>- r. 2024</p>
+                    </div>
+                </div>
+
+                <div class="partneri__item">
+                    <picture><img src="/images/logo-rc-milovice.png" width="200" alt="logo RC Milovice"></picture>
+                    <div>
+                        <h3>Rodinné centrum Milovice</h3>
+                        <p class="paragraph paragraph--bold">- Podpora spolku KoniPAS <br>- dlouhodobě</p>
+                    </div>
+                </div>
+
+                <div class="partneri__item">
+                    <picture><img src="/images/logo-simicek.png" width="200" alt="logo Canisterapie Šimíček"></picture>
+                    <div>
+                        <h3>Canisterapie Šimíček, z. s.</h3>
+                        <p class="paragraph paragraph--bold">- Podpora spolku KoniPAS <br>- dlouhodobě</p>
+                    </div>
+                </div>
+
+                <div class="partneri__item">
+                    <picture><img src="/images/logo-domov-mlada.png" width="200" alt="logo domov Mladá"></picture>
+                    <div>
+                        <h3>Domov Mladá</h3>
+                        <p class="paragraph paragraph--bold">- Podpora spolku KoniPAS <br>- dlouhodobě</p>
+                    </div>
+                </div>
+
+                
             </div>
         </div>
         
-        <p class="paragraph paragraph--bold u-margin-top-medium">Děkujeme všem firmám a organizacím, které mají zájem spolupracovat s KoniPAS Milovice z.s. Jsme vděčni za vaši přízeň a podporu.</p>
+        <p class="partneri__thanks paragraph paragraph--bold u-margin-top-medium u-padding-bottom-medium">Děkujeme všem firmám a organizacím, které mají zájem spolupracovat s KoniPAS Milovice z.s. Jsme vděčni za vaši přízeň a podporu.</p>
+
+        <h2>V roce 2023 aktivity KoniPAS (pod Maminky dětem, z. s.) a KoniPAS Milovice, z. s. podporovali:</h2>
+
+        <h3>Středočeský kraj</h3>
+
+        <p>  - HUF SK -  Dotace pro Maminky dětem, z. s. na projekt Podpora rodin v Milovicích - r. 2023 (část financí na aktivity KoniPAS hrazena v r. 2023 z této dotace)</p>
+
+        <h3>MěÚ Milovice</h3>
+
+        <p>- Dotace pro Maminky dětem, z. s. na projekt Celoroční provoz Maminky dětem, z. s. - r. 2023 (aktivity KoniPAS mohly být realizovány i díky této dotaci)</p>
+
+        <h2 class="u-margin-top-medium">Finanční dary:</h2>
+        <p>Veronika Lerchová - finanční dar na nákup hudebních nástrojů na Muzikoterapii</p>
+        <p>Martin Mihališin - finanční dar na nákup hudebních nástrojů na Muzikoterapii</p>
+        <p>Zdeněk Hrom – finanční dar</p>
+        <p>Eva Strachová – finanční dar</p>
+
+        <h2>Materiální dary:</h2>
+        <p>Eva Strachová – senzorické deky</p>
+
+        <p class="partneri__thanks paragraph paragraph--bold u-margin-top-medium">Vážíme si všech, kteří nejrůznějšími způsoby podpořili naši činnost. Děkujeme všem, kteří nám v tomto roce pomáhali pomáhat. Děkujeme za Vaši podporu a spolupráci.</p>
     </section>
 </div>
