--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ title: KoniPAS
                         <p class="paragraph">Pracujeme na sestavení multidisciplinárního týmu, který poskytne potřebnou komplexní péči rodinám ve vhodných prostorách k tomu určených. Chceme nabízet rozvojové aktivity, smyslové terapie a vícedenní skupinové pobyty pro rodiny. Avšak k naplnění tohoto cíle potřebujeme i Vaši pomoc.</p>
                         <p class="paragraph">Váš finanční příspěvek nám umožní rozšířit naše služby, zajistit kvalitní odbornou pomoc a nabídnout rodinám více příležitostí pro vzájemné setkávání a sdílení. Každý dar, bez ohledu na jeho velikost, má obrovský význam. Přispívá k tomu, aby se rodiče a jejich děti necítili osamoceni ve svém boji, ale naopak cítili sílu a podporu celé komunity.</p>
                         <p class="paragraph">Děkujeme Vám za Vaši podporu a za to, že jste součástí naší cesty. Společně dokážeme více!</p>
-                        <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Více o možnostech podpory</a></p>
+                        <!-- <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Více o možnostech podpory</a></p> -->
                     </div>
                 </div>
             </section>
