--- a/kontakt.html
+++ b/kontakt.html
@@ -6,14 +6,14 @@ title: Kontakt
 <div class="u-background u-background--color-primary-200">
     <section class="section-o-nas u-wrapper">
         <h1 class="heading-primary">Kontakt</h1>
-        <div class="section-o-nas-2__third-content">
+        <div class="section-o-nas-2__third-content u-padding-bottom-medium">
             <div class="section-o-nas-2__part-of-flex">
-                <p class="paragraph paragraph--bold">Sídlo</p>
+                <h2 class="">Sídlo</h2>
                 <p class="paragraph">KoniPAS Milovice, z.s <br>Průběžná 606 <br>28923 Milovice</p>
                 <p class="paragraph">mobil: 733 612 720</p>
             </div>
             <div class="section-o-nas-2__part-of-flex">
-                <p class="paragraph paragraph--bold">Kontaktní údaje rodinného centra kde se scházíme:</p>
+                <h2 class="">Kontaktní údaje rodinného centra kde se scházíme:</h2>
                 <p class="paragraph">Rodinné cetrum Milovice <br>1.patro HERNA, vstup u lezecké stěny<br>Komenského 581, Mladá, 28924 Milovice <br> Průvodce setkáváním: Žaneta Mihališin </p>
             </div>
         </div>
