--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: KoniPAS
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-2.jpg" alt=""></a>
-                        <p class="card-action__p"><a class="card-action__link" href="#">Vzděláváme rodiče</a></p>
+                        <p class="card-action__p"><a class="card-action__link" href="co-delame/vzdelavame-rodice/">Vzděláváme rodiče</a></p>
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-3.jpg" alt=""></a>
@@ -50,11 +50,11 @@ title: KoniPAS
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-5.jpg" alt=""></a>
-                        <p class="card-action__p"><a class="card-action__link" href="#">Podporujeme děti</a></p>
+                        <p class="card-action__p"><a class="card-action__link" href="co-delame/podporujeme-deti/">Podporujeme děti</a></p>
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-6.jpg" alt=""></a>
-                        <p class="card-action__p"><a class="card-action__link" href="#">Pořádáme akce</a></p>
+                        <p class="card-action__p"><a class="card-action__link" href="co-delame/poradame-akce/">Pořádáme akce</a></p>
                     </article>
 
                     <!-- 6-9 -->
@@ -64,7 +64,7 @@ title: KoniPAS
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-8.jpg" alt=""></a>
-                        <p class="card-action__p"><a class="card-action__link" href="#">Půjčujeme pomůcky</a></p>
+                        <p class="card-action__p"><a class="card-action__link" href="co-delame/pujcujeme-pomucky/">Půjčujeme pomůcky</a></p>
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="/co-delame/odborne-staze/"><img class="card-action__img" src="/images/placeholder-actions-9.jpg" alt=""></a>
