--- a/komunitni-deni.html
+++ b/komunitni-deni.html
@@ -5,9 +5,53 @@ title: Komunitní dění
 
 <div class="u-background u-background--color-primary-200">
     <section class="section-o-nas u-wrapper">
-        <h1 class="heading-primary">Aktuality</h1>
-        <div class="section-o-nas-2__third-content">
+        <h1 class="heading-primary u-center-text u-padding-top-small">Přijďte se s námi setkat</h1>
+
+        <div class="u-background u-background--color-primary-200">
+            <section class="section-for u-wrapper u-padding-bottom-medium">
+                <h2 class="heading-quartiary u-center-text">Nejnovější akce a festivaly</h2>
+                <hr>
+                <h3 class="heading-tertiary u-margin-top-medium">Fastival Žijeme tu spolu</h3>
+                <h4 class="heading-quartiary">Inkluzivní hudební festival Domova Mladá se blíží</h4>
+                <p class="paragraph">Milovický Domov Mladá propojuje místní komunitu, klienty, odborníky, hudební a divadelní umělce i výtvarníky na jedinečném (nejen) hudebním festivalu. Ten se odehraje 14. června 2024. V rámci nabitého programu vystoupí klienti spřátelených zařízení sociálních služeb, děti z místních mateřských a základních škol, nestátních neziskových organizací, dobrovolných spolků i profesionální hudebníci z celé České republiky.</p>
+                <p class="paragraph">Program podpoří další místní organizace, spolky, Sokol, dobrovolní hasiči či studenti škol. Festival však zároveň získal záštitu zmocněnkyně pro lidská práva Kláry Šimáčkové Laurenčíkovéá, vedoucí sociálního výboru Parlamentu ČR Miluše Horské, hejtmanky středočeského kraje Petry Peckové (STAN), starosty města Milovice Milana Poura, nebo starosty města Lysá nad Labem Karla Marka.</p>
+                <p class="paragraph">Program festivalu Žijeme tu spolu odstartuje již ve 13 hodin a bude probíhat v několika paralelních částech, kterými je hlavní festivalový program, diskuse pro odbornou i širokou veřejnost na téma „Lidská práva lidí s postižením“, zábavný program pro děti včetně stříkání pěny, pásmo vážné hudby, nebo country show. Nedílnou součástí bude foodcourt, ukázky práce městské policie i komunitní tržiště. Veřejná diskuse „Lidská práva lidí s postižením“</p>
+                <p class="paragraph">Po zahájení akce festivalu začne ve 14 hodin veřejná diskuse na téma „Jak se žije lidem s postižením“ a následná tisková konference. Se svými příspěvky vystoupí například zmocněnkyně pro lidská práva Klára Šimáčková Laurenčíková, vedoucí sociálního výboru Parlamentu ČR Miluše Horká, hejtmanka středočeského kraje Petra Pecková (STAN), starosta města Milovice Milan Pour, starosta města Lysá nad Labem Karel Marek a další odborníci. Po jejím bude prostor k individuálním rozhovorům.</p>
+                <p class="paragraph">Ve stacionáři následně proběhne ještě další program. Zájemci si zde budou moci prohlédnou fotografie z Domova Mladá, poslechnou vážnou hudbu v podání dětí ze ZŠ Juventa, výstavu uměleckých děl. Bude zde také k vidění Elektronický mobilní asistent - E.M.A a proběhne slavnostní otevření počítačové multisenzorické místnosti.</p>
+                <p class="paragraph">Každou půl hodinu pak ve stacionáři na velkoplošné obrazovce poběží jeden z krátkých filmů se kterými Domov získával ceny na festivalu Mental Power Fest. Kromě toho si zde na své přijdou také fajnšmekři, kteří si zde budou moci vychutnat pásmo vážné hudby. V prostorách před stacionářem paralelně poběží Country show Ládi Lacha, který zde vystoupí také se svojí kapelou Lachtani Vládi Lacha.</p>
+                <h4 class="heading-tertiary">Festival</h4>
+                <p class="paragraph">Hlavní festivalový program si diváci mohou vychutnat v horní části zahrady na velkém podiu. Kde vystoupí řada klientských kapel a uskupení, místní školy a školky a také hudební skupiny jako Comedy & Beat, Povětroň, Loco Loco a další.
+                </p>
+                <p class="paragraph">Příchozím bude k dispozici bohaté občerstvení, pozvání přijali místní podniky. Například Pivovar Tahoun, k dispozici budou také bramboráky, či langoše, které „na pevno“ sídlí u milovického Kulturního domu. Přijede oblíbená kavárna Maka Coffee, nebo Milovická nádražka. Neméně zajímavé bude tržiště výrobků s možností jejich nákupu, nakoupíte třeba od Domova na Hrádku, Domova Pod Skalami Kurovodice, Mela Sedlčany, Nakladatelství Dharma Gaia, Přijedou také výrobci autorského oblečení, nebo doplňků a spousta dalšího.</p>
+                <h4 class="heading-tertiary">Program pro děti</h4>
+                <p class="paragraph">Nebudou se nudit ani děti pro něž je připraveno stříkání hasičské pěny. Po celou dobu festivalu si pak mohou užívat řadu stanovišť s hrami, chybět nebude milovické rodinné centrum, či Point Milovice. Přítomni budou také ochotní dobrovolníci z jednoty Sokol Milovic, kteří i letos přivezou svého maskota, čí městská policie.</p>
+                <h4 class="heading-tertiary">Doprovodný program</h4>
+                <ul>
+                    <li>Food Court</li>
+                    <li>Tržiště výrobků</li>
+                    <li>Hry pro děti</li>
+                    <li>Stříkání hasičské pěny</li>
+                    <li>Ukázky práce městské policie</li>
+                    <li>Rodinné centrum Milovice</li>
+                    <li>Point Milovice</li>
+                    <li>Sokol Milovice</li>
+                    <li>Domov Mladá</li>
+                    <li>E.M.A. – Elektronický Mobilní Asistent</li>
+                    <li>Konipass</li>
+                    <li>Focus</li>
+                    <li>Sokol Milovice</li>
+                    <li>Hasiči Milovice</li>
+                    <li>Městská policie Milovice</li>
+                    <li>Centrum Christina</li>
+                </ul>
+                
+                <picture class="comunity__fig"><img class="comunity__img" src="/images/letak-fest-zijeme-tu-spolu.webp" alt="latáček akcí březen 2024"></picture>
+            </section>
+        </div>
+
+        <div class="section-o-nas-2__third-content u-margin-top-medium">
             <div class="section-o-nas-2__part-of-flex">
+                <h3 class="heading-tertiary u-margin-top-medium">Cesta pohádkovým lesem</h3>
                 <p class="paragraph">Akce dne 25.9 v Milovicích ,,Cesta pohádkovým lesem" měla obrovskou účast rodin ❤️ Děti nadšeně plnili úkoly, vyhrávali ceny v tombole, tvořili v dílničce. Pohladili si zvířátka z chovu Kristýny Novotné. Celé rodiny se potěšili nabídce, v altánu s občerstvením a domácími výrobky maminek z Rodinné centrum Milovice </p>
                 <p class="paragraph">Zahřál nás každý pozdrav od Vás i návštéva u nás na stánku s tombolou ❤️</p>
             </div>
@@ -19,7 +63,6 @@ title: Komunitní dění
 
 <div class="u-background u-background--color-primary-200">
     <section class="section-for u-wrapper u-padding-top-large u-padding-bottom-medium">
-        <h1 class="heading-primary">Přijďte se s námi setkat</h1>
-        <figcaption class="comunity__fig"><img class="comunity__img" src="/images/letak_brezen-2024.jpeg" alt="latáček akcí březen 2024"></figcaption>
+        <picture class="comunity__fig"><img class="comunity__img" src="/images/letak_brezen-2024.jpeg" alt="latáček akcí březen 2024"></picture>
     </section>
 </div>
