--- a/komunitni-deni.html
+++ b/komunitni-deni.html
@@ -5,7 +5,7 @@ title: Komunitní dění
 
 <div class="u-background u-background--color-primary-200">
     <section class="section-o-nas u-wrapper">
-        <h1 class="heading-primary u-center-text u-padding-top-small">Přijďte se s námi setkat</h1>
+        <h1 class="heading-primary u-center-text u-padding-top-medium">Přijďte se s námi setkat</h1>
 
         <div class="u-background u-background--color-primary-200">
             <section class="section-for u-wrapper u-padding-bottom-medium">
