home and medallion

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ title: KoniPAS
             <section class="section-institutions u-wrapper u-padding-top-small u-padding-bottom-small">
                 <div aria-colspan="section-institutions__content" class="u-padding-bottom-small">
                     <h2 class="heading-secondary section-institutions__title">Odborníci, školy, školky</h2>
-                    <p class="paragraph paragraph--white">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
-                    <p class="u-center-text u-padding-top-small u-padding-bottom-small"><a class="btn btn--light" href="#">Odkazy zde</a></p>
+                    <p class="paragraph paragraph--white">„Pravidelně organizujeme setkání a přátelské aktivity pro rodiče s dětmi, které zahrnují i semináře a školení, vedené zkušenými pedagogy, odbornými lektory a terapeuty. Připravujeme obohacující program pro rodiče, zatímco si děti hrají v herně, kde je vymezen prostor výhradně pro malý kolektiv dětí a dospělých. Účastníci nejen navazují nová přátelství, ale také získávají nový pohled na svět a prožívají smysluplné okamžiky.“</p>
+                    <p class="u-center-text u-padding-top-small u-padding-bottom-small"><a class="btn btn--light" href="/o-nas/">Zjistit více</a></p>
                 </div>
                 <figcaption class="section-institutions__fig u-responzive-img__wrapp"><img class="u-responzive-img__img section-institutions__img" src="/images/praceholder-institutions.jpg" alt="dítě s PAS"></figcaption>
             </section>
@@ -114,15 +114,15 @@ title: KoniPAS
                 </div>
                 <div class="section-gift__qr">
                     <div class="section-gift__qr-col-1-of-2">
-                        <h3 class="section-gift__qr-title">Náš transparentní účet:</h3>
+                        <h3 class="section-gift__qr-title">Náš účet:</h3>
                         <p class="section-gift__num-account u-padding-bottom-small">2602681682 / 2010</p>
                         <picture class="section-gift__img"><img src="/images/qr-kod.png" alt="QR kód pro platbu"></picture>
                         <ol class="section-gift__instructions">
                             <li>Jděte do svého internetového bankovnictví</li>
-                            <li>V platbách nejdete Naskenovat QR kód</li>
+                            <li>V platbách najdete Naskenovat QR kód</li>
                             <li>Naskenujte QR kód namířením mobilu na kód</li>
-                            <li>Do příjemnce napište konipas (je to jen info pro vás)</li>
-                            <li>Nechte částku na 100kč nebo napiště vlastní</li>
+                            <li>Do příjemce napište konipas (je to jen info pro vás)</li>
+                            <li>Nechte částku na 100kč nebo napište vlastní</li>
                             <li>Odešlete platbu</li>
                         </ol>
                     </div>
@@ -130,7 +130,6 @@ title: KoniPAS
                         <p class="paragraph">Pracujeme na sestavení multidisciplinárního týmu, který poskytne potřebnou komplexní péči rodinám ve vhodných prostorách k tomu určených. Chceme nabízet rozvojové aktivity, smyslové terapie a vícedenní skupinové pobyty pro rodiny. Avšak k naplnění tohoto cíle potřebujeme i Vaši pomoc.</p>
                         <p class="paragraph">Váš finanční příspěvek nám umožní rozšířit naše služby, zajistit kvalitní odbornou pomoc a nabídnout rodinám více příležitostí pro vzájemné setkávání a sdílení. Každý dar, bez ohledu na jeho velikost, má obrovský význam. Přispívá k tomu, aby se rodiče a jejich děti necítili osamoceni ve svém boji, ale naopak cítili sílu a podporu celé komunity.</p>
                         <p class="paragraph">Děkujeme Vám za Vaši podporu a za to, že jste součástí naší cesty. Společně dokážeme více!</p>
-                        <!-- <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Více o možnostech podpory</a></p> -->
                     </div>
                 </div>
             </section>
