--- a/o-nas.html
+++ b/o-nas.html
@@ -82,14 +82,13 @@ title: O nás
                     <p class="medallion__label">funkce ve spolku</p>
                     <p class="medallion__text paragraph">Nabízené služby KoniPASe mi přijdou velmi přínosné a důležité. Byla bych moc ráda, kdyby KoniPAS existoval již v době, kdy můj starší syn válčil s výslovností doslova každé hlásky a kdy se učil, jak ze dvou a tří slov sestavit smysluplnou větu. Vzájemná podpora rodičů mezi sebou i možnost setkávat se s odborníky z různých oblastí je pro rodiče velká pomoc. KoniPAS vznikl v lednu 2021 pod organizací Maminky dětem, z. s. v Rodinném centru Milovice (kde jsem již od roku 2003). Postupně roste a rozšiřuje své služby. Zcela po právu si tedy zaslouží být samostatnou organizací. Jsem hrdá na to, že jsem nové organizaci KoniPAS Milovice, z. s. pomáhala při jejím vzniku a osamostatňování.</p>
                 </div>
+                <div class="medallion">
+                    <figcaption class="medallion__fig"><img class="medallion__img" src="/images/medailonek_martina-formankova.jpg" width="250" alt="Martina Formánková, DiS."></figcaption>
+                    <h4 class="medallion__title">Martina Formánková, DiS.</h4>
+                    <p class="medallion__label">koordinátorka a lektorka</p>
+                    <p class="medallion__text paragraph">Jsem maminka chlapečka s vývojovou dysfázií a jeho mladší sestřičky. Podpůrná setkávání KoniPASu jsem začala navštěvovat v době, kdy syn procházel diagnostikou, a hledala jsem cesty, kam všude je možné se obrátit a jak se synem pracovat. Na setkáních se mi dostalo nejen odborných znalostí, ale především tolik potřebné podpory a přijetí. Do spolku jsem se rozhodla vstoupit, abych podpořila jeho rozvoj a mohla pomáhat dalším rodinám zorientovat se ve složité životní situaci.</p>
+                </div>
             </div>
         </section>
     </div>
 </div>
-
-
-<!-- xxxxxxx
-<p class="paragraph paragraph--bold">Chceš nás poznat blíž? Stav se na kafe!</p>
-<p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Naše vize</a></p>
-
- -->
