--- a/o-nas.html
+++ b/o-nas.html
@@ -9,9 +9,7 @@ title: O nás
         <div class="section-o-nas__flex">
             <figcaption class="section-o-nas__fig u-padding-top-small"><img class="section-o-nas__img" src="/images/zaneta-mihalisin.jpg" width="460px" alt="zakladatelka KoniPAS"></figcaption>
             <div class="section-o-nas__content">
-                <h2 class="heading-tertiary">Co detailně děláme?</h2>
-                <p class="paragraph">Respekt, pochopení a přijetí, tři základní pojmy úspěšné mezilidské komunikace. Cílem naší iniciativy je propojení lidí. Propojit dospělé i děti, které obecně vnímáme jako zdravé s těmi znevýhodněnými, s těmi, kteří si žijí svůj vlastní život ve svém vlastním světě. Dáváme si za cíl podnítit zájem nahlédnout do uzavřeného světa našich nejbližších.</p>
-                <p class="u-center-text u-padding-bottom-small"><a class="btn" href="/vize/">Naše vize</a></p>
+                <p class="paragraph">Svět rodičů a pečujících osob o lidi s poruchou autistického spektra (PAS) a vývojovou dysfázií (VD) není pouze černobílý. Je pestrobarevný, někdy temně šedý a jindy zabalený modrou mlhou naděje. Je plný úžasných okamžiků, ale také smutku a mnohdy i zoufalství. Sdílená radost se násobí a problémy se zdají být menší, když na ně není člověk sám. V KoniPASu jsme v tom společně. Na legraci, na přátelství i na všechno, co nás tíží.</p>
             </div>
         </div>
     </section>
@@ -26,23 +24,25 @@ title: O nás
             </div>
         </div>
         <div class="section-o-nas-2__second-content">
-            <p class="paragraph">Sdílíme názor, že sdílená starost, menší starost. Sdílená radost, dvojnásobná radost. Proto rádi vítáme nové rodiny, stálé účastníky. Snižujeme tak stigma ve společnosti, pomáháme si navzájem sdílením, společně podnikáme výlety.</p>
-            <h2 class="heading-tertiary">Proč vlastně vznikl Konipas Milovice z.s? A kdo stál u zrodu?</h2>
-            <p class="paragraph">Milovicích žije přibližně 14 tisíc obyvatel. Rodiny se zde, jako všude jinde, potýkají s většími  i menšími problémy. Pokud se jedná o znevýhodněné dětí, může se zdát, že v menších obcích jsou více vidět.</p>
-            <p class="paragraph">Rodiče takovýchto děti se s nimi chtějí zapojovat do běžného života a navštěvovat nejrůznější kroužky a aktivity. Několik milovických maminek se tedy spojilo a navázalo na úspěch vzniku Rodinného centra pod vedením paní ředitelky Mgr. Petra Dobiášová. </p>
+            <h2 class="heading-tertiary">Co děláme?</h2>
+            <p class="paragraph">Ze všech sil se snažíme šířit povědomí o PAS a VD. Usilujeme o zboření předsudků, které ve společnosti vůči osobám trpícím těmito poruchami bohužel stále přetrvávají. Vzájemně propojujeme rodiče a pečující osoby, protože věříme, že naše společné úsilí založené na sdílených zkušenostech a nápadech usnadní našim dětem a blízkým s PAS a VD integraci do běžného života a pomůže společnosti lépe pochopit lidi s těmito poruchami.</p>
+            <p class="paragraph">Pravidelně, pod vedením Žanety Mihališin, DiS., organizujeme setkání a přátelské aktivity pro rodiče s dětmi v zázemí Rodinného centra Milovice a Domova Mladá. Naše aktivity zahrnují i semináře a školení, vedené zkušenými pedagogy, odbornými lektory a terapeuty. Připravujeme obohacující, rozvojový program pro rodiče, zatímco si děti hrají v herně, kde je vymezen prostor výhradně pro malý kolektiv dětí a dospělých. Účastníci nejen navazují nová přátelství, ale také získávají nový pohled na svět a prožívají smysluplné okamžiky.</p>
+            <p class="paragraph">Sami pečujeme a víme, co znamená starat se o dítě s autismem či vývojovou dysfázií. Jsme názoru, že sdílená starost, menší starost. Sdílená radost, dvojnásobná radost. Proto rádi vítáme nové rodiny i stálé účastníky. Snižujeme tak stigma ve společnosti, pomáháme si navzájem sdílením, společně podnikáme výlety. Mezi oblíbené aktivity KoniPASu se rychle zařadila canisterapie, zooterapie, pohybové a výtvarné činnosti.</p>
         </div>
         <div class="section-o-nas-2__third-content">
             <div class="section-o-nas-2__part-of-flex">
-                <h3 class="heading-tertiary">Kdo jsme?</h3>
-                <p class="paragraph">Jsme sdružení komunity rodičů, pořádající pravidelná setkání rodin s dětmi, v zázemí rodinného centra v Milovicích. Naše aktivity zahrnují pravidelná setkání, semináře a školení, vedené zkušenými pedagogy, odbornými lektory a terapeuty. Účastníci nejen navazují nová přátelství, ale také získávají nový pohled na svět a prožívají smysluplné okamžiky.  Sami pečujeme, víme co znamená starat se o díte  autismem, s vývojovou dysfázií.</p>
+                <h3 class="heading-tertiary">Proč vlastně vznikl Konipas Milovice, z. s. a kdo stál u jeho zrodu?</h3>
+                <p class="paragraph">V Milovicích žije přibližně 14 000 obyvatel. Rodiny se zde, jako všude jinde, potýkají s většími i menšími problémy. Pokud se jedná o znevýhodněné děti, může se zdát, že v menších obcích jsou více vidět.</p>
+                <p class="paragraph">Rodiče takovýchto děti se s nimi chtějí zapojovat do běžného života a navštěvovat nejrůznější kroužky a aktivity. Několik milovických maminek se tedy spojilo a navázalo na úspěch vzniku Rodinného centra pod vedením paní ředitelky Mgr. Petry Dobiášové.</p>
             </div>
             <figcaption class="section-o-nas-2__fig u-padding-top-medium"><img class="section-o-nas-2__img" src="/images/IMG_20230517_170002.jpg" width="500" alt=""></figcaption>
         </div>
         <div>
+            <p class="paragraph">Aktivita KoniPAS vznikla pod spolkem Maminky dětem, z. s. v lednu 2021. Již tehdy nabízela pravidelná setkání, vzájemné sdílení, možnost vyměnit si užitečné rady, tipy a zkušenosti, občas seminář s odborníkem. Podobné služby pro rodiny se specifickými potřebami nikdo jiný v širokém okolí nenabízí. Postupně se vytvořila parta aktivních rodičů, kteří byli ochotni posouvat vše ještě o krůček dál. KoniPAS se začal více osamostatňovat a založil si vlastní organizaci KoniPAS Milovice, z. s.</p>
             <h4>Chceš nás poznat blíž? Stav se na kafe!</h4>
-            <p class="paragraph">Připojte se k našemu týmu a spojte své zkušenosti s ostatními rodinami, které jsou součástí komunity Konipas Milovice z.s. Klíčovým principem je otevřená komunikace a vzájemný respekt. Rodičům zde poskytujeme prostor k vyjádření a naslouchání. Všichni členové rodiny se zapojují a během setkání mají děti možnost hrát si v herně.</p>
+            <p class="paragraph">Jsme rodiče, jsme přátelé, jsme rodina. Neptáme se, co tě přivádí. Nebudeme se vyptávat na věci, o kterých zatím mluvit nedokážeš nebo nechceš. Máme tolik jiných témat k hovoru nad kávou! Sdílíme zkušenosti i nápady. Tvoříme, smějeme se, tančíme, skotačíme… Užíváme si sounáležitost a přítomný okamžik. Sdílíme čas a prostor, ať už skupinovou aktivitou nebo každý sám. Společně se radujeme z našich malých-velkých úspěchů, máme pochopení pro svérázné chování našich dětí a hlavně – nesoudíme.</p>
         </div>
-        <p class="u-center-text u-padding-bottom-small u-padding-top-small"><a class="btn" href="#">Podívat se na termíny setkání</a></p>
+        <p class="u-center-text u-padding-bottom-small u-padding-top-small"><a class="btn" target="_blank" href="https://www.facebook.com/KoniPasMilovice/">Podívat se na termíny setkání</a></p>
     </section>
 
 
