--- a/o-nas.html
+++ b/o-nas.html
@@ -9,7 +9,7 @@ title: O nás
         <div class="section-o-nas__flex">
             <figcaption class="section-o-nas__fig u-padding-top-small"><img class="section-o-nas__img" src="/images/zaneta-mihalisin.jpg" width="460px" alt="zakladatelka KoniPAS"></figcaption>
             <div class="section-o-nas__content">
-                <p class="paragraph">Svět rodičů a pečujících osob o lidi s poruchou autistického spektra (PAS) a vývojovou dysfázií (VD) není pouze černobílý. Je pestrobarevný, někdy temně šedý a jindy zabalený modrou mlhou naděje. Je plný úžasných okamžiků, ale také smutku a mnohdy i zoufalství. Sdílená radost se násobí a problémy se zdají být menší, když na ně není člověk sám. V KoniPASu jsme v tom společně. Na legraci, na přátelství i na všechno, co nás tíží.</p>
+                <p class="paragraph u-padding-top-medium">Svět rodičů a pečujících osob o lidi s poruchou autistického spektra (PAS) a vývojovou dysfázií (VD) není pouze černobílý. Je pestrobarevný, někdy temně šedý a jindy zabalený modrou mlhou naděje. Je plný úžasných okamžiků, ale také smutku a mnohdy i zoufalství. Sdílená radost se násobí a problémy se zdají být menší, když na ně není člověk sám. V KoniPASu jsme v tom společně. Na legraci, na přátelství i na všechno, co nás tíží.</p>
             </div>
         </div>
     </section>
